--- a/pizzeria/pizzeria/Views/Shared/_Layout.cshtml
+++ b/pizzeria/pizzeria/Views/Shared/_Layout.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Identity;
+@inject UserManager<AppUser> userManager
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -25,6 +28,40 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+
+
+                    @if (!User.Identity.IsAuthenticated)
+                    {
+                        <a class="btn btn-outline-success my-2 my-sm-0" asp-controller="Account" asp-action="Login">
+                            <i class="bi bi-box-arrow-in-right"></i> Connexion
+                        </a>
+                        <span style="padding: 5px;"></span>
+                        <a class="btn btn-outline-success my-2 my-sm-0" asp-controller="Account" asp-action="Register">
+                            <i class="bi bi-person-plus"></i> Inscription
+                        </a>
+                    }
+                    else
+                    {
+                        @*User Button*@
+                        <div class="dropdown">
+                            <button class="btn btn-success dropdown-toggle" type="button" id="profile-btn" data-toggle="dropdown" aria-expended="false">
+                                <i class="bi bi-person-badge">@userManager.GetUserName(User)</i>
+                            </button>
+                            <ul class="dropdown-menu" aria-labelleby="profile-btn">
+                                <li>
+                                    <a class="dropdown-item" asp-controller="Orders" asp-action="Index">
+                                        <i class="bi bi-list">Commandes</i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <span style="padding: 5px;"></span>
+                        <form asp-controller="Account" asp-action="Logout">
+                            <button class="btn btn-outline-danger my-2 my-sm-0">
+                                <i class="bi bi-box-arrow-in-right"></i> Déconnexion
+                            </button>
+                        </form>
+                    }
                     </ul>
                 </div>
             </div>
