--- a/pizzeria/pizzeria/Views/Categories/Index.cshtml
+++ b/pizzeria/pizzeria/Views/Categories/Index.cshtml
@@ -1,35 +1,40 @@
 ﻿@model IEnumerable<pizzeria.Models.Category>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Catégories";
 }
 
 <h1>Index</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.CategoryName)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.CategoryName)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.IdCategory">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.IdCategory">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.IdCategory">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<div class="row">
+    <div class="col-md-6 offset-md-3">
+        <table class="table align-content-center">
+            <thead>
+                <tr>
+                    <th>
+                        Catégories
+                    </th>
+                    <th class="d-flex justify-content-center">
+                        Actions
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model) {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.CategoryName)
+                        </td>
+                        <td class="align-middle d-flex justify-content-center">
+                            <a class="btn btn-outline-primary me-3" asp-action="Edit" asp-route-id="@item.IdCategory"><i class="bi bi-pencil-square"></i>Modifier </a>
+                            <a class="btn btn-danger text-white" asp-action="Delete" asp-route-id="@item.IdCategory"><i class="bi bi-trash"></i>Supprimer </a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+     </div>
+</div>
+
+
+@await Html.PartialAsync("_CreateButton", "Categories")
