--- a/pizzeria/pizzeria/Views/Ingredients/Delete.cshtml
+++ b/pizzeria/pizzeria/Views/Ingredients/Delete.cshtml
@@ -1,13 +1,13 @@
-﻿@model pizzeria.Models.Category
+﻿@model pizzeria.Models.Ingredient
 
 @{
-    ViewData["Title"] = "Supprimer catégorie";
+    ViewData["Title"] = "Supprimer ingrédient";
 }
 
 <div class="row text">
     <div class="col-md-8 offset-2">
         <p>
-            <h1>Supprimer une catégorie</h1>
+            <h1>Supprimer un Ingrédient</h1>
         </p>
         <div class="row">
             <div class="col-md-8 offset-2">
@@ -17,15 +17,15 @@
                     <img id="ProfilePicturePreview" />
                 </div>
                 <div class="form-group">
-                    <label asp-for="CategoryName" class="control-label"></label>
-                    <input asp-for="CategoryName" class="form-control" disabled />
-                    <span asp-validation-for="CategoryName" class="text-danger"></span>
+                    <label asp-for="IngredientName" class="control-label"></label>
+                    <input asp-for="IngredientName" class="form-control" disabled />
+                    <span asp-validation-for="IngredientName" class="text-danger"></span>
                 </div>
 
 
                 <div class="form-group">
                     <form asp-action="Delete">
-                        <input type="hidden" asp-for="IdCategory" />
+                        <input type="hidden" asp-for="IdIngredient" />
                         @Html.AntiForgeryToken()
                         <input type="submit" value="Confirmer" class="btn btn-outline-success float-right" />
                         <a class="btn btn-outline-secondary" asp-action="Index">Annuler</a>
