--- a/pizzeria/pizzeria/Views/Ingredients/Edit.cshtml
+++ b/pizzeria/pizzeria/Views/Ingredients/Edit.cshtml
@@ -1,13 +1,13 @@
-﻿@model pizzeria.Models.Category
+﻿@model pizzeria.Models.Ingredient
 
 @{
-    ViewData["Title"] = "Modifier catégorie";
+    ViewData["Title"] = "Modifier ingrédient";
 }
 
 <div class="row text">
     <div class="col-md-8 offset-2">
         <p>
-            <h1>Mettre à jour une catégorie</h1>
+            <h1>Mettre à jour un ingrédient</h1>
         </p>
         <div class="row">
             <div class="col-md-8 offset-2">
@@ -18,16 +18,16 @@
                         <img id="ProfilePicturePreview" />
                     </div>
                     <div class="form-group">
-                        <label asp-for="CategoryName" class="control-label"></label>
-                        <input asp-for="CategoryName" class="form-control" />
-                        <span asp-validation-for="CategoryName" class="text-danger"></span>
+                        <label asp-for="IngredientName" class="control-label"></label>
+                        <input asp-for="IngredientName" class="form-control" />
+                        <span asp-validation-for="IngredientName" class="text-danger"></span>
                     </div>
 
                     <div class="form-group">
-                        <input type="hidden" asp-for="IdCategory" />
+                        <input type="hidden" asp-for="IdIngredient" />
                         @Html.AntiForgeryToken()
                         <input type="submit" value="Mettre à jour" class="btn btn-outline-success float-right" />
-                        <a class="btn btn-outline-secondary" asp-action="Index">Retour</a>
+                        <a class="btn btn-outline-secondary" asp-action="Index">Show All</a>
                     </div>
                 </form>
 
@@ -36,5 +36,3 @@
         </div>
     </div>
 </div>
-
-
