--- a/pizzeria/pizzeria/Views/Shared/_Layout.cshtml
+++ b/pizzeria/pizzeria/Views/Shared/_Layout.cshtml
@@ -38,6 +38,12 @@
                                 </button>
                                 <ul class="dropdown-menu">
                                     <li>
+                                        <a class="dropdown-item" asp-controller="Products" asp-action="Index">
+                                            <i class="bi bi-list">Produits</i>
+
+                                        </a>
+                                    </li>
+                                    <li>
                                         <a class="dropdown-item" asp-controller="Orders" asp-action="Index">
                                             <i class="bi bi-list">Utilisateurs</i>
 
