--- a/pizzeria/pizzeria/Views/Products/Create.cshtml
+++ b/pizzeria/pizzeria/Views/Products/Create.cshtml
@@ -35,6 +35,7 @@
             <div class="form-group">
                 <label asp-for="IdCategory" class="control-label"></label>
                 <select asp-for="IdCategory" class ="form-control" asp-items="ViewBag.IdCategory"></select>
+                <span asp-validation-for="IdCategory" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="IdIngredients" class="control-label"></label>
@@ -42,7 +43,7 @@
                 <span asp-validation-for="IdIngredients" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Créer" class="btn btn-primary" />
             </div>
         </form>
     </div>
