--- a/pizzeria/pizzeria/Views/Products/Delete.cshtml
+++ b/pizzeria/pizzeria/Views/Products/Delete.cshtml
@@ -1,51 +1,30 @@
 ﻿@model pizzeria.Models.Product
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Supprimer produit";
 }
 
-<h1>Delete</h1>
+<div class="row text">
+    <div class="col-md-8 offset-2">
+        <p>
+            <h1>Supprimer un produit</h1>
+        </p>
+        <div class="row">
+            <div class="col-md-8 offset-2">
+                <p>Voulez vous vraiment supprimer ce produit?</p>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Product</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ProductName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ProductName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ProductDescription)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ProductDescription)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ProductPrice)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ProductPrice)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ProductImageName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ProductImageName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IdCategoryNavigation)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IdCategoryNavigation.IdCategory)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="IdProduct" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+                <div class="form-group">
+                    <form asp-action="DeleteConfirmed">
+                        @Html.AntiForgeryToken()
+                        <input type="hidden" asp-for="IdProduct" />
+                        <input type="submit" value="Confirmer" class="btn btn-outline-success float-right" />
+                        <a class="btn btn-outline-secondary" asp-action="Index">Annuler</a>
+                    </form>
+                </div>
+
+
+
+            </div>
+        </div>
+    </div>
 </div>
