--- a/pizzeria/pizzeria/Views/Products/Details.cshtml
+++ b/pizzeria/pizzeria/Views/Products/Details.cshtml
@@ -6,43 +6,69 @@
 
 <h1>Details</h1>
 
-<div>
-    <h4>Product</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ProductName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ProductName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ProductDescription)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ProductDescription)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ProductPrice)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ProductPrice)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ProductImageName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ProductImageName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IdCategoryNavigation)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IdCategoryNavigation.IdCategory)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.IdProduct">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+<div class="row">
+
+    <div class="col-xl-8 offset-2">
+        <div class="card mb-12">
+            <div class="row g-0">
+                <div class="col-xl-12">
+                    <div class="card-header text-white bg-info">
+                        <p class="card-text">
+                            <h5 class="card-title">
+                                @Model.ProductName
+                                @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                                {
+                                    <a class="text-white float-right" asp-action="Edit" asp-route-id="@Model.IdProduct"><i class="bi bi-pencil-square"></i></a>
+                                }
+                            </h5>
+                        </p>
+                    </div>
+                </div>
+                <div class="col-xl-4">
+                    <img src="~/images/@Model.ProductImageName" width="100%" alt="@Model.ProductName">
+                </div>
+                <div class="col-xl-8">
+                    <div class="card-body">
+                        <p class="card-text">@Model.ProductDescription</p>
+                        @*<p class="card-text"><b>Cinema: </b>Cinema</p>
+                        <p class="card-text"><b>Category: </b>Categorie</p>
+                        <p class="card-text"><b>Start Date: </b>Start date</p>
+                        <p class="card-text"><b>End Date: </b>End date</p>
+                        <p class="card-text ">
+                        <b>Status: </b>
+                        Status
+                        </p>*@
+
+                        <p class="card-text">
+                            <b class="md-2">Catégorie : </b>@Model.IdCategoryNavigation.CategoryName
+                        </p>
+                        <p class="card-text">
+                            <hr />
+                            <b class="md-2">Ingrédients :</b>
+                            <hr />
+
+                            <div>
+                                @foreach (var ingredient in Model.IdIngredients)
+                                {
+                                    <div>
+                                        <Span class="ml-1 mb-1">- @ingredient.IngredientName</Span>
+                                    </div>
+
+                                }
+                            </div>
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-12">
+                    <div class="card-footer ">
+                        <p class="card-text">
+                            <a class="btn btn-outline-primary float-right" asp-action="Index">Retour</a>
+                            <a class="btn btn-success text-white" asp-controller="Orders" asp-action="AddItemToCart" asp-route-id="@Model.IdProduct"><i class="bi bi-cart-plus"></i> Ajouter au panier (Price @Model.ProductPrice.ToString("c"))</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
