--- a/pizzeria/pizzeria/Views/Products/Index.cshtml
+++ b/pizzeria/pizzeria/Views/Products/Index.cshtml
@@ -9,51 +9,58 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.ProductName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ProductDescription)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ProductPrice)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ProductImageName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.IdCategoryNavigation)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.ProductName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ProductDescription)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ProductPrice)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ProductImageName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IdCategoryNavigation.IdCategory)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.IdProduct">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.IdProduct">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.IdProduct">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+
+<div class="row">
+    @foreach (var item in Model)
+    {
+        <div class="col-xl-3 col-md-6 col-sm-12 border-primary mb-3">
+            <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                    <div class="col-md-12">
+                        <div class="card-header text-white bg-info" style="max-height: 65px;">
+                            <p class="card-text">
+                                <h5 class="card-title">
+                                    @item.ProductName
+                                    @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                                    {
+                                        <a class="text-white float-right" asp-action="Edit" asp-route-id="@item.IdProduct"><i class="bi bi-pencil-square"></i></a>
+                                    }
+                                </h5>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-xl-12">
+                        <a asp-action="Details" asp-route-id="@item.IdProduct">
+                            <img class="pizza-img" style="max-height: 220px;" src="~/images/@item.ProductImageName" width="100%" alt="@item.ProductName">
+                        </a>
+                    </div>
+                    @*<div class="col-xl-6">
+                <div class="card-body">
+                <p class="card-text">@item.PizzaDescription</p>
+                <p class="card-text"><b>Cinema: </b>Cinema</p>
+                <p class="card-text"><b>Category: </b>Categorie</p>
+                <p class="card-text"><b>Start Date: </b>Start date</p>
+                <p class="card-text"><b>End Date: </b>End date</p>
+                <p class="card-text ">
+                <b>Status: </b>
+                Status
+                </p>
+
+                </div>
+                </div>*@
+                    <div class="col-xl-12">
+                        <div class="card-footer ">
+                            <p class="card-text">
+                                <a class="btn btn-outline-primary w-100 mb-1" asp-action="Details" asp-route-id="@item.IdProduct"><i class="bi bi-eye-fill"></i> Détails</a>
+                                <a class="btn btn-success text-white w-100" asp-controller="Orders" asp-action="AddItemToCart" asp-route-id="@item.IdProduct"><i class="bi bi-cart-plus"></i> Ajouter au panier (Prix @item.ProductPrice.ToString("c"))</a>
+
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    }
+</div>
+
+@await Html.PartialAsync("_CreateButton", "Products")
