Work on Orders - Repo Controller added

--- a/pizzeria/pizzeria/Views/Shared/_Layout.cshtml
+++ b/pizzeria/pizzeria/Views/Shared/_Layout.cshtml
@@ -99,6 +99,11 @@
                         </form>
                     }
 
+                    @*Cart Button*@
+                    <ul class="navbar-nav">
+                        @await Component.InvokeAsync("CartSummary")
+                    </ul>
+
                 </div>
                 
             </div>
