--- a/pizzeria/pizzeria/Views/AdminOrders/OrderDelete.cshtml
+++ b/pizzeria/pizzeria/Views/AdminOrders/OrderDelete.cshtml
@@ -19,13 +19,11 @@
                         </div>
 
                          
-                            <div class="form-group">
-                                <form asp-action="OrderDeleteConfirmed">
-                        <input type="hidden" asp-for="@Model.IdOrder" />
-                                    <input type="submit" value="Confirmer" class="btn btn-outline-success float-right" />
-                                    <a class="btn btn-outline-secondary" asp-action="Orders">Annuler</a>
-                                 </form>
-                            </div>
+                        <div class="form-group">
+                            @Html.ActionLink("Confirmer", "OrderDeleteConfirmed", "AdminOrders", new { idOrder = @Model.IdOrder}, new{@class="btn btn-danger text-white bi bi-trash"})
+                            <a class="btn btn-outline-secondary" asp-action="Orders">Annuler</a>
+                                 
+                        </div>
                         
                         
 
