--- a/pizzeria/pizzeria/Views/Shared/_Layout.cshtml
+++ b/pizzeria/pizzeria/Views/Shared/_Layout.cshtml
@@ -89,6 +89,11 @@
                             <ul class="dropdown-menu">
 
                                 <li>
+                                    <a class="dropdown-item" asp-controller="Addresses" asp-action="Index">
+                                        <i class="bi bi-list">Adresses</i>
+                                    </a>
+                                </li>
+                                <li>
                                     <a class="dropdown-item" asp-controller="Orders" asp-action="Index">
                                         <i class="bi bi-list">Commandes</i>
                                     </a>
