--- a/pizzeria/pizzeria/Views/AdminOrders/Orders.cshtml
+++ b/pizzeria/pizzeria/Views/AdminOrders/Orders.cshtml
@@ -48,6 +48,7 @@
                                         @order.IdAppUserNavigation.LastName
                                 </td>
                                 <td class="align-middle ">
+                                    <a class="btn btn-outline-primary" asp-action="OrderValidate" asp-route-id="@order.IdOrder"><i class="bi bi-pencil-square"></i>Valider </a> 
                                     <a class="btn btn-outline-primary" asp-action="OrderEdit" asp-route-id="@order.IdOrder"><i class="bi bi-pencil-square"></i>Modifier </a> 
                                     <a class="btn btn-danger text-white" asp-action="OrderDelete" asp-route-id="@order.IdOrder"><i class="bi bi-trash"></i>Supprimer </a>
                                 </td>
